<resources>
    <string name="app_name">RideShare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_name">Full Name</string>

    <string name="welcome">Welcome</string>
    <string name="login_failed">Login Failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="guest">Guest Login</string>
    <string name="Book_Ride">Book Ride</string>
    <string name="Show_Ride">Show All Rides</string>
    <string name="chat">Chat Support</string>
    <string name="logout">Logout</string>
</resources>