<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserActivity">


            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"

                android:textSize="50sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/indigo_daisy"
                android:layout_marginTop="60dp"/>

             <Button
                android:id="@+id/btn_book_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Book_Ride"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_show_rides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_book_ride"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/Show_Ride"/>
            <Button
                android:id="@+id/btn_chat_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_show_rides"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/chat"/>
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_chat_support"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/logout"/>

</LinearLayout>
